--- a/queHayCerca/Info.plist
+++ b/queHayCerca/Info.plist
@@ -46,5 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Nos das permiso para utlizar el tu posicion GPS</string>
 </dict>
 </plist>
